fix(mobile): improved styling on mobile to prevent tab header buttons to be cut out

--- a/app/client/assets/css/components.less
+++ b/app/client/assets/css/components.less
@@ -244,6 +244,14 @@ div {
         display: none;
       }
     }
+
+    @media screen and (max-width: @width-small-mobile) {
+      top: -9px;
+
+      .tab-sub-title {
+        font-size: 14px;
+      }
+    }
   }
 
   .tab-sub-content {
